--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,22 +1,25 @@
 {
-    "/js/app.js": "/js/app.js?id=6713b0b10e3dbeeba12a",
+    "/js/app.js": "/js/app.js?id=f2ddf9520fea721dcace",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth.forget.js": "/js/auth.forget.js?id=637173bb39cdc191f5c9",
     "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=ce55e6d20edba11a6104",
     "/js/auth.login.js": "/js/auth.login.js?id=259b0fd89cdf4bfeb1ec",
     "/js/auth.reset.js": "/js/auth.reset.js?id=5c4d14e6f27644724b1c",
     "/js/auth.verify.js": "/js/auth.verify.js?id=92867a1cf609ef5ace1e",
-    "/js/dashboard.js": "/js/dashboard.js?id=641185d040f427203c2d",
+    "/js/dashboard.js": "/js/dashboard.js?id=b2778257ccb02f22ef71",
     "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=dd665a5d74b537c5fce7",
     "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
     "/js/formula.js": "/js/formula.js?id=d0b943e7cfac999c0659",
     "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=765b952fe705a1c04d69",
+    "/js/material.js": "/js/material.js?id=5b1c8649353d96846491",
     "/js/matter.js": "/js/matter.js?id=f74163b8bfab0e1213d8",
     "/js/pack.js": "/js/pack.js?id=aec8ceea07b493673af9",
-    "/js/package.js": "/js/package.js?id=a84b9b2935528e212af8",
+    "/js/package.js": "/js/package.js?id=82d64a4d6a2df26162bc",
     "/js/packer.js": "/js/packer.js?id=d32dcd4ea50d8e65bb6d",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
     "/js/profile.js": "/js/profile.js?id=d6cd41387fc2f3f1c2ad",
-    "/js/user.js": "/js/user.js?id=0ca226a8c7977949e205"
+    "/js/user.js": "/js/user.js?id=0ca226a8c7977949e205",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js?id=34a41808f55dd751552c",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js?id=82eebc897c4528ab0e58",
+    "/js/sale.js": "/js/sale.js?id=aadb8f69015b96f706e2"
 }
